<?xml version="1.0"?>
<package>
  <name>wheelchair_iaslab_navigation</name>
  <version>0.0.1</version>
  <description>The wheelchair_iaslab_navigation package</description>

  <maintainer email="alberto.gottardi@studenti.unipd.it">Alberto Gottardi</maintainer>

  <author email="alberto.gottardi@studenti.unipd.it">Alberto Gottardi</author>

  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>nav_core</buildtool_depend>


  <build_depend>roslaunch</build_depend>
  <build_depend>nav_core</build_depend>

  
  <run_depend>amcl</run_depend>
  <run_depend>gmapping</run_depend>
  <run_depend>map_server</run_depend>
  <run_depend>move_base</run_depend>
  <run_depend>navfn</run_depend>
  <run_depend>base_local_planner</run_depend>
  <run_depend>dwa_local_planner</run_depend>
  <run_depend>local_planner</run_depend>

  <build_depend>pluginlib</build_depend>
  <run_depend>pluginlib</run_depend>

  <run_depend>nav_core</run_depend>


  <export>
    <!-- <nav_core plugin="${prefix}/lp_plugin.xml"/> -->
  </export>
  
</package>
